--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
-Admin_username == "***" 
-Admin_password == "***"
+ADMUSR=***
+ADMPWR=***
